Min & Max temperatures

--- a/index.html
+++ b/index.html
@@ -33,27 +33,23 @@
                 <input type="submit" value="Search" id="search-button">
               </form>
               </h2>
-          <h4>Sunday, 21/01/2020, 12h00</h4>
+          <h4></h4>
           <div class="row">
             </div><div class="col-sm">
                 <i class="far fa-sun mainweather"></i> </div><div class="currentweather">
                   <span class="temperature" id="mainTemperature">
-                  17
                 </span>
-                <span class="cf-result">
-                  <a href="#" id="c-link">
-                    °C
-                  </a>
-                  |
-                  <a href="#" id="f-link">
-                    °F
-                  </a>
+                <span class="result">
+                    °C |°F
                 </span>
                 <hr/>
-                <div class="daymax small" id=dailyMaxTem>
-                 </div>
-                <hr/>
-                <div class="daymin small" id=dailyMinTem></div>
+                <div class="daymax small" id="dailyMaxTem"></div>
+                <span class="celsius small">
+                  º
+                </span><hr/>
+                <div class="daymin small" id="dailyMinTem" ></div><span class="celsius small">
+                  º
+                </span>
               </div>
               <span id=cityTbc>
               </span>
