Insert Main Wether Icon

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               </h2>
           <h4></h4>
           <div class="row">
-            </div><div class="col-sm">
-                <i class="far fa-sun mainweather"></i> </div><div class="currentweather">
+            </div><div class="col-6">
+                <img src="#" id="icon"/> </div><div class="currentweather">
                   <span class="temperature" id="mainTemperature">
                 </span>
                 <span class="result">
