Unit conversion add

--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
                 <img src="#" id="icon"/> </div><div class="currentweather">
                   <span class="temperature" id="mainTemperature">
                 </span>
-                <span class="result">
-                    °C |°F
+                <span class="result"> <a href="#" id="celsius-link">°C</a>|<a href="#" id="fahrenheit-link">°F</a>
                 </span>
                 <hr/>
                 <div class="daymax small" id="dailyMaxTem"></div>
-                <span class="celsius small">
-                  º
+                <span class="celsius small"><small>ºC</small>
                 </span><hr/>
-                <div class="daymin small" id="dailyMinTem" ></div><span class="celsius small">
-                  º
+                <div class="daymin small" id="dailyMinTem" ></div><span class="celsius small"><small>ºC</small>
                 </span>
               </div>
               <span id=cityTbc>
